trying to fix sizing on safari mobile

--- a/style.css
+++ b/style.css
@@ -119,6 +119,10 @@ a:hover{
     font-size: 25px;
     
 }
+#illus{
+    width: 200px;
+    min-width: 200px;
+}
 
 #emailLink{
     margin-top: 100px;
